build: remove traces of old bundling logic